--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: yjama <yjama@student.21-school.ru>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/11/09 11:49:23 by yjama             #+#    #+#              #
-#    Updated: 2021/09/21 14:15:49 by yjama            ###   ########.fr        #
+#    Updated: 2021/08/28 20:02:21 by yjama            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -69,8 +69,7 @@ SRC =	ft_atoi.c\
 		ft_lstmap.c\
 		ft_lstnew.c\
 		ft_lstnew_str.c\
-		ft_lstsize.c\
-		get_next_line.c
+		ft_lstsize.c
 
 OBJ = $(SRC:.c=.o)
 
